# swagger/swagger.yml
@@ -5,18 +5,105 @@ info:
   version: 1.0.0
 
 servers:
-  - url: http://localhost:4000
+  - url: http://localhost:4000/api
     description: Servidor local de desarrollo
 
 tags:
   - name: Auth
-    description: Autenticación
+    description: "Endpoints relacionados con la autenticación y la gestión de sesiones."
   - name: Usuarios
-    description: Gestión propia del usuario
+    description: "Operaciones relacionadas con la gestión de los usuarios."
   - name: Tareas
-    description: CRUD de tareas
+    description: "Operaciones CRUD para tareas de usuario."
   - name: Admin
-    description: Gestión interna del sistema
+    description: "Endpoints restringidos a administradores para gestión interna."
+
+components:
+  schemas:
+    Tareas:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        title:
+          type: string
+          example: "Tarea title"
+        descr:
+          type: string
+          example: "tarea description"
+        createdAt:
+          type: string
+          format: date-time
+          readOnly: true
+          example: "2017-07-21T17:32:28Z"
+        expiresIn:
+          type: string
+          format: date-time
+          example: "2017-07-21T17:32:28Z"
+        state:
+          type: string
+          enum: ["pendiente", "completada"]
+          example: "pendiente"
+        priority:
+          type: string
+          enum: ["baja", "media", "alta"]
+          example: "media"
+        userId:
+          type: integer
+          example: 1
+      required:
+        - title
+
+    Usuarios:
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          maxLength: 30
+          example: "John Doe"
+        email:
+          type: string
+          format: email
+          maxLength: 100
+          example: "johndoe@email.com"
+        passw:
+          type: string
+          format: password
+          minLength: 8
+          writeOnly: true
+          example: "password123"
+        role:
+          type: string
+          enum: ["admin", "usuario"]
+          example: "usuario"
+        createdAt:
+          type: string
+          format: date-time
+          readOnly: true
+          example: "2017-07-21T17:32:28Z"
+        active:
+          type: boolean
+          example: true
+        codeEmail:
+          type: string
+          format: uuid
+          example: "444792de-1209-4ffb-96fc-956012baaf9e"
+      required:
+        - name
+        - email
+        - passw
+
+  securitySchemes:
+    JWTAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+      description: "El token JWT se envía en una cookie llamada `access_token`."
+  security:
+    - JWTAuth: []
 
 paths:
   /api/login:
@@ -41,7 +128,7 @@ paths:
                 email: "email@mail.com"
                 role: "usuario"
                 createdAt: "2024-11-10T12:00:00Z"
-                active: 1
+                active: true
         "400":
           description: Credenciales Invalidas
         "500":
@@ -69,7 +156,7 @@ paths:
                 email: "email@mail.com"
                 role: "usuario"
                 createdAt: "2024-11-10T12:00:00Z"
-                active: 0
+                active: false
         "400":
           description: Cuenta ya registrada
         "500":
@@ -97,7 +184,7 @@ paths:
                 email: "email@mail.com"
                 role: "usuario"
                 createdAt: "2024-11-10T12:00:00Z"
-                active: 1
+                active: true
         "401":
           description: Token faltante
         "403":
@@ -109,6 +196,8 @@ paths:
       tags:
         - Tareas
       summary: Obtener todas las tareas del usuario
+      security:
+        - JWTAuth: []
       responses:
         "200":
           description: Lista de tareas
@@ -123,10 +212,12 @@ paths:
                 state: "pendiente"
                 priority: "media"
                 userId: 1
-        "404":
-          description: Sin tareas creadas
         "401":
           description: No autorizado
+        "403":
+          description: Su cuenta se encuentra inactiva
+        "404":
+          description: Sin tareas creadas
         "498":
           description: Token inválido
 
@@ -134,6 +225,8 @@ paths:
       tags:
         - Tareas
       summary: Crear una nueva tarea
+      security:
+        - JWTAuth: []
       requestBody:
         required: true
         content:
@@ -159,6 +252,8 @@ paths:
                 userId: 1
         "401":
           description: No autorizado
+        "403":
+          description: Su cuenta se encuentra inactiva
         "498":
           description: Token inválido
         "500":
@@ -169,10 +264,13 @@ paths:
       tags:
         - Tareas
       summary: Obtener datos de una tarea específica
+      security:
+        - JWTAuth: []
       parameters:
         - name: id
           in: path
           required: true
+          description: "ID único de la tarea"
           schema:
             type: integer
       responses:
@@ -191,6 +289,8 @@ paths:
                 userId: 1
         "401":
           description: No autorizado
+        "403":
+          description: Su cuenta se encuentra inactiva
         "404":
           description: Tarea no encontrada
         "498":
@@ -200,10 +300,13 @@ paths:
       tags:
         - Tareas
       summary: Modificar datos de una tarea
+      security:
+        - JWTAuth: []
       parameters:
         - name: id
           in: path
           required: true
+          description: ID de la tarea a actualizar
           schema:
             type: integer
       requestBody:
@@ -211,13 +314,13 @@ paths:
         content:
           application/json:
             example:
-              title: "Nueva Tarea"
-              descr: "Descripción de la tarea"
+              title: "Tarea Actualizada"
+              descr: "Descripción de la tarea actualizada"
               expiresIn: "2024-11-10T12:00:00Z"
               priority: "media"
       responses:
         "200":
-          description: Tarea actualizada
+          description: Tarea actualizada con éxito
           content:
             application/json:
               example:
@@ -231,6 +334,8 @@ paths:
                 userId: 1
         "401":
           description: No autorizado
+        "403":
+          description: Su cuenta se encuentra inactiva
         "404":
           description: Tarea no encontrada
         "498":
@@ -242,6 +347,8 @@ paths:
       tags:
         - Tareas
       summary: Marcar como completada una tarea
+      security:
+        - JWTAuth: []
       parameters:
         - name: id
           in: path
@@ -264,6 +371,8 @@ paths:
                 userId: 1
         "401":
           description: No autorizado
+        "403":
+          description: Su cuenta se encuentra inactiva
         "404":
           description: Tarea no encontrada
         "498":
@@ -275,6 +384,8 @@ paths:
       tags:
         - Tareas
       summary: Borrar una tarea
+      security:
+        - JWTAuth: []
       parameters:
         - name: id
           in: path
@@ -286,6 +397,8 @@ paths:
           description: Tarea eliminada con éxito
         "401":
           description: No autorizado
+        "403":
+          description: Su cuenta se encuentra inactiva
         "404":
           description: Tarea no encontrada
         "498":
@@ -342,6 +455,8 @@ paths:
       tags:
         - Usuarios
       summary: Modificar nombre y/o email
+      security:
+        - JWTAuth: []
       parameters:
         - name: id
           in: header
@@ -365,6 +480,8 @@ paths:
                 email: "johndoe@email.com"
                 role: "usuario"
                 createdAt: "2024-11-10T12:00:00Z"
+        "403":
+          description: Su cuenta se encuentra inactiva
         "404":
           description: Usuario no encontrado
         "500":
@@ -375,6 +492,8 @@ paths:
       tags:
         - Usuarios
       summary: Cambiar contraseña
+      security:
+        - JWTAuth: []
       parameters:
         - name: id
           in: header
@@ -391,8 +510,10 @@ paths:
       responses:
         "200":
           description: Contraseña cambiada exitosamente
+        "403":
+          description: Su cuenta se encuentra inactiva
         "400":
-          description: Contraseña incorrecta
+          description: Contraseña incorrecta La contraseña actual no coincide con la registrada.
         "500":
           description: Error del servidor
 
@@ -401,6 +522,8 @@ paths:
       tags:
         - Admin
       summary: Obtener todos los usuarios
+      security:
+        - JWTAuth: []
       responses:
         "200":
           description: Lista de Usuarios
@@ -422,6 +545,8 @@ paths:
       tags:
         - Admin
       summary: Crea un usuario
+      security:
+        - JWTAuth: []
       requestBody:
         required: true
         content:
@@ -453,6 +578,8 @@ paths:
       tags:
         - Admin
       summary: Obtener todas las tareas
+      security:
+        - JWTAuth: []
       responses:
         "200":
           description: Lista de Tareas
